--- a/assets/style.css
+++ b/assets/style.css
@@ -162,6 +162,17 @@ a {
 	justify-content: space-between;
 }
 
+.clients .slogans a {
+	display: flex;
+	align-items: center;
+	height: 90px;
+	padding: 0 42px;
+	border-radius: 12px;
+}
+
+.clients .slogans a:hover:not(:nth-child(3)){
+	box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+}
 
 /* ========= Guides =========*/
 
