--- a/assets/style.css
+++ b/assets/style.css
@@ -12,6 +12,7 @@ html {
 }
 
 body {
+	/* width: 100%; */
 	font-size: 1.6rem;
 	font-family: "Poppins", sans-serif;
 }
@@ -50,6 +51,7 @@ a {
 	overflow: hidden;
 }
 /* =========Header=========*/
+
 .header {
 	position: relative;
 	background: #E6F0FF;
@@ -60,6 +62,8 @@ a {
 	display: flex;
 	align-items: center;
 	padding-top: 38px;
+	/* padding: 12px 0; */
+	/* background:orange; */
 }
 
 .navbar ul {
@@ -86,11 +90,12 @@ a {
 	color: var(--primary-color);
 	font-size: 1.4rem;
 	font-weight: 500;
-	margin-right: 18px;
+	/* margin-right: 18px; */
 }
 
 .navbar .action-btn {
 	padding: 13px 16px;
+	margin-left: 18px;
 }
 
 .hero {
@@ -105,13 +110,14 @@ a {
 	color: #687690;
 	font-size: 1.8rem;
 	line-height: 1.5rem;
+	letter-spacing: 0.01em;
 	font-weight: 500;
 }
 
 .hero .title {
 	color: #000336;
 	margin-top: 8px;
-	font-size: 6.4rem;
+	font-size: 6.2rem;
 	font-weight: 700;
 	line-height: 118.75%; /* 118.75% */
 }
@@ -153,6 +159,10 @@ a {
 	font-size: 1.6rem;
 	font-weight: 500;
 	line-height: 125%; /* 125% */
+}
+
+.clients .row-desc {
+	margin-top: 23px;
 }
 
 .clients .slogans {
@@ -413,13 +423,14 @@ a {
 
 .stats .info .desc {
 	color: #5A6473;
-	width: 309px;
+	max-width: 309px;
+	margin-top: 20px;
 	font-size: 1.6rem;
 	font-weight: 400;
 	line-height: 188%; /* 187.5% */
 }
 
-.stats .img-block > img {
+.stats .img-block .image {
 	display: block;
 	width: 400px;
 	height: 460px;
@@ -442,7 +453,7 @@ a {
 	color: var(--second-color);
 	font-size: 2.6rem;
 	font-weight: 700;
-	letter-spacing: 0.03rem;
+	letter-spacing: 0.01rem;
 }
 
 .stats .stats-trend .icon {
@@ -454,7 +465,7 @@ a {
 	margin-top: 8px;
 	font-size: 1.2rem;
 	font-weight: 400;
-	line-height: 1.8; /* 150% */
+	line-height: 1.5; /* 150% */
 }
 
 .stats .stats-trend .seperate {
@@ -466,7 +477,7 @@ a {
 .stats .avatar-block {
 	display: flex;
 	flex-wrap: wrap;
-	gap: 14px 16px;
+	gap: 16px 14px;
 	margin-top: 26px;
 }
 
@@ -480,6 +491,13 @@ a {
 	margin-left: -3px;
 	border-radius: 50%;
 	object-fit: cover;
+	font-weight: 450;
+	font-size: 0.7rem;
+	line-height: 16px;
+	text-align: center;
+	letter-spacing: -0.02em;
+	color: #fff;
+	background: var(--bg-color, #fff);
 }
 
 .stats .avatar-block .avatar:first-child {
@@ -497,27 +515,27 @@ a {
 }
 
 .stats .row-quantity {
+	justify-content: space-between;
 	margin-top: 110px;
-	padding-left: 32px;
+	padding: 0 32px;
 }
 
 .stats .quantity-item .qty {
 	color: #000;
 	font-size: 6.4rem;
 	font-weight: 600;
-	line-height: 100%; /* 100% */
 }
 
 .stats .quantity-item .qty-desc {
 	color: #7B8087;
-	margin-top: 22px;
+	margin-top: 24px;
 	font-size: 1.8rem;
 	font-weight: 500;
 }
-
+/* 
 .stats .quantity-item:nth-child(2) {
 	margin: 0 220px;
-}
+} */
 
 /* ========= Subscription =========*/
 .subscription {
@@ -585,7 +603,7 @@ a {
 
 .footer .heading {
 	color: #1C1C1D;
-	font-family: Lato;
+	font-family: "Lato", sans-serif;
 	font-size: 2rem;
 	font-weight: 700;
 }
@@ -598,18 +616,16 @@ a {
 	margin-top: 18px;
 }
 
-.footer .desc {
-	color: #7A7A7E;
-	font-size: 1.6rem;
-	font-weight: 400;
-	line-height: 175%; /* 175% */
-}
-
-.footer .list a {
+.footer .list a, .footer .desc {
 	color: #7A7A7E;
 	font-size: 1.6rem;
 	font-weight: 400;
 	white-space: nowrap;
+}
+
+.footer .desc {
+	white-space: normal;
+	line-height: 175%; /* 175% */
 }
 
 .footer .social {
@@ -619,10 +635,11 @@ a {
 
 .footer .social-link {
 	display: flex;
-	justify-content: space-around;
+	justify-content: center;
 	align-items: center;
 	width: 28px;
 	height: 28px;
+	border-radius: 3px;
 	background-color: #F9F9F9;
 }
 
@@ -632,7 +649,6 @@ a {
 
 .footer .social-link:hover {
 	background-color: #ece7e7;
-	border-radius: 3px;
 }
 
 .footer .row-bottom {
